--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
                     <li><a href="#" class="orange-text">Home</a></li>
-                    <li><a href="../sobre/sobre.html" class="black-text">Sobre</a></li>
-                    <li><a href="../entrar/login.html" class="black-text">Entrar</a></li>
-                    <li><a href="../cadastro/cadastro.html" class="black-text">Registrar</a></li>
+                    <li><a href="./pages/sobre/sobre.html" class="black-text">Sobre</a></li>
+                    <li><a href="../pages/entrar/login.html" class="black-text">Entrar</a></li>
+                    <li><a href="../pages/cadastro/cadastro.html" class="black-text">Registrar</a></li>
                 </ul>
 
             </div>
@@ -47,9 +47,9 @@
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
         <li><a href="#" class="orange-text">Home</a></li>
-        <li><a href="../sobre/sobre.html" class="black-text">Sobre</a></li>
-        <li><a href="../entrar/login.html" class="black-text">Entrar</a></li>
-        <li><a href="../cadastro/cadastro.html" class="black-text">Registrar</a></li>
+        <li><a href="../pages/sobre/sobre.html" class="black-text">Sobre</a></li>
+        <li><a href="../pages/entrar/login.html" class="black-text">Entrar</a></li>
+        <li><a href="../pages/cadastro/cadastro.html" class="black-text">Registrar</a></li>
     </ul>
 
     <!-- BANNER -->
@@ -296,9 +296,9 @@
                 <div class="col l4 offset-l2 s12">
                     <ul>
                         <li><a class="white-text text-lighten-3" href="#">Home</a></li>
-                        <li><a class="white-text text-lighten-3" href="../sobre/sobre.html">Sobre</a></li>
-                        <li><a class="white-text text-lighten-3" href="../entrar/login.html">Entrar</li>
-                        <li><a class="white-text text-lighten-3" href="../cadastro/cadastro.html">Registrar</a></li>
+                        <li><a class="white-text text-lighten-3" href="../pages/sobre/sobre.html">Sobre</a></li>
+                        <li><a class="white-text text-lighten-3" href="../pages/entrar/login.html">Entrar</li>
+                        <li><a class="white-text text-lighten-3" href="../pages/cadastro/cadastro.html">Registrar</a></li>
                         <li class="pwa__alert"><a class="white-text text-lighten-3 pwa__alert__btn">Adicionar a tela inicial</a></li>
                     </ul>
                 </div>
