--- a/pages/sobre/sobre.html
+++ b/pages/sobre/sobre.html
@@ -28,7 +28,7 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="../index/index.html" class="black-text">Home</a></li>
+                    <li><a href="../../index/index.html" class="black-text">Home</a></li>
                     <li><a href="#" class="orange-text">Sobre</a></li>
                     <li><a href="../entrar/login.html" class="black-text">Entrar</a></li>
                     <li><a href="../cadastro/cadastro.html" class="black-text">Registrar</a></li>
@@ -39,7 +39,7 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="../index/index.html">Início</a></li>
+        <li><a href="../../index/index.html">Início</a></li>
         <li><a href="#" class="orange-text">Sobre</a></li>
         <li><a href="../entrar/login.html" class="black-text">Entrar</a></li>
         <li><a href="../cadastro/cadastro.html" class="black-text">Registrar</a></li>
@@ -305,7 +305,7 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="white-text text-lighten-3" href="../index/index.html">Home</a></li>
+                        <li><a class="white-text text-lighten-3" href="../../index/index.html">Home</a></li>
                         <li><a class="white-text text-lighten-3" href="#">Sobre</a></li>
                         <li><a class="white-text text-lighten-3" href="../entrar/login.html">Entrar</li>
                         <li><a class="white-text text-lighten-3" href="../cadastro/cadastro.html">Registrar</a></li>
