--- a/pages/treino/treino.html
+++ b/pages/treino/treino.html
@@ -27,7 +27,7 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="../index/index.html" class="black-text">Home</a></li>
+                    <li><a href="../../index/index.html" class="black-text">Home</a></li>
                     <li><a href="../alunos/alunos.html" class="orange-text">Alunos</a></li>
                     <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
                     <li><a href="../controle/controle.html" class="black-text">Controle</a></li>
@@ -39,7 +39,7 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="../index/index.html" class="black-text">Home</a></li>
+        <li><a href="../../index/index.html" class="black-text">Home</a></li>
         <li><a href="../alunos/alunos.html" class="orange-text">Alunos</a></li>
         <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
         <li><a href="../controle/controle.html" class="black-text">Controle</a></li>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="white-text text-lighten-3" href="../index/index.html">Home</a></li>
+                        <li><a class="white-text text-lighten-3" href="../../index/index.html">Home</a></li>
                         <li><a class="white-text text-lighten-3" href="../alunos/alunos.html">Alunos</a></li>
                         <li><a class="white-text text-lighten-3" href="../crie/crie.html">Crie</a></li>
                         <li><a class="white-text text-lighten-3" href="../controle/controle.html">Controle</a></li>
