--- a/pages/controle/controle.html
+++ b/pages/controle/controle.html
@@ -19,7 +19,7 @@
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <a href="../index/index.html" class="brand-logo"><img class="responsive-img" src="../../img/logo.png" alt="High Performance" style="width: 300px;"></a>
+                <a href="../../index.html" class="brand-logo"><img class="responsive-img" src="../../img/logo.png" alt="High Performance" style="width: 300px;"></a>
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
@@ -28,7 +28,7 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="../../index/index.html" class="black-text">Home</a></li>
+                    <li><a href="../../index.html" class="black-text">Home</a></li>
                     <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
                     <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
                     <li><a href="#" class="orange-text">Controle</a></li>
@@ -40,7 +40,7 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="../../index/index.html" class="black-text">Home</a></li>
+        <li><a href="../../index.html" class="black-text">Home</a></li>
         <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
         <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
         <li><a href="#" class="orange-text">Controle</a></li>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="white-text text-lighten-3" href="../../index/index.html">Home</a></li>
+                        <li><a class="white-text text-lighten-3" href="../../index.html">Home</a></li>
                         <li><a class="white-text text-lighten-3" href="../alunos/alunos.html">Alunos</a></li>
                         <li><a class="white-text text-lighten-3" href="../crie/crie.html">Crie</a></li>
                         <li><a class="white-text text-lighten-3" href="#">Controle</a></li>
