--- a/pages/crie/crie.html
+++ b/pages/crie/crie.html
@@ -16,7 +16,7 @@
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <a href="index.html" class="brand-logo"><img class="responsive-img" src="../../img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
+                <a href="../../index.html" class="brand-logo"><img class="responsive-img" src="../../img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
@@ -25,7 +25,7 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="../../index/index.html" class="black-text">Home</a></li>
+                    <li><a href="../../index.html" class="black-text">Home</a></li>
                     <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
                     <li><a href="#" class="orange-text">Crie</a></li>
                     <li><a href="../controle/controle.html" class="black-text">Controle</a></li>
@@ -37,7 +37,7 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="../../index/index.html" class="black-text">Home</a></li>
+        <li><a href="../../index.html" class="black-text">Home</a></li>
         <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
         <li><a href="#" class="orange-text">Crie</a></li>
         <li><a href="../controle/controle.html" class="black-text">Controle</a></li>
@@ -120,7 +120,7 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="white-text text-lighten-3" href="../../index/index.html">Home</a></li>
+                        <li><a class="white-text text-lighten-3" href="../../index.html">Home</a></li>
                         <li><a class="white-text text-lighten-3" href="../alunos/alunos.html">Alunos</a></li>
                         <li><a class="white-text text-lighten-3" href="">Crie</a></li>
                         <li><a class="white-text text-lighten-3" href="../controle/controle.html">Controle</a></li>
