--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <script>
         if (navigator.serviceWorker) {
-            navigator.serviceWorker.register('./sw.js')
+            navigator.serviceWorker.register('./js/sw.js')
         }
     </script>
 </head>
@@ -320,10 +320,10 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/topo.js"></script>
-    <script src="./js/carrousel.js"></script>
-    <script src="./js/pwa.dev.min.js"></script>
+    <script src="../../js/main.js"></script>
+    <script src="../../js/topo.js"></script>
+    <script src="../../js/carrousel.js"></script>
+    <script src="../../js/pwa.dev.min.js"></script>
 </body>
 
 </html>
