--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
             navigator.serviceWorker.register('./js/sw.js')
         }
     </script>
+    <script src="./js/pwa.js"></script>
 </body>
 
 </html>
