--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HIGH PERFORMANCE</title>
-    <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="manifest" href="manifest.json" />
+    <link rel="apple-touch-icon" href="img/icon-192x192.png">
+    <link rel=”canonical” href=”index.html” />
 </head>
 
 <body>
@@ -321,7 +322,7 @@
     <script src="../../js/pwa.dev.min.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/sw.js')
+            navigator.serviceWorker.register('./sw.js')
                 .then(function() {
                     console.log('service worker registered');
                 })
