--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="manifest" href="/manifest.json">
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('./sw.js')
+            navigator.serviceWorker.register('/sw.js')
                 .then(function() {
                     console.log('service worker registered');
                 })
