Melhorando  para mobile

--- a/pages/alunos/alunos.html
+++ b/pages/alunos/alunos.html
@@ -53,7 +53,7 @@
         <div class="quadrado">
             <div class="row square" id="alunos">
                 <div class="col s12 m12 l6 ">
-                    <h2>1<br> Alunos ativos</h2>
+                    <h2>1 Alunos ativos</h2>
                 </div>
                 <div class="col s12 m12 l6 ">
                     <img class="responsive-img" src="../../img/user.png" alt="Alunos ativos">
