--- a/pages/controle/controle.html
+++ b/pages/controle/controle.html
@@ -54,7 +54,7 @@
             <div class="quadrado">
                 <div class="row square" id="alunos">
                     <div class="col s12 m12 l6 ">
-                        <h2>1<br> Alunos ativos</h2>
+                        <h2>1 Alunos ativos</h2>
                     </div>
                     <div class="col s12 m12 l6 ">
                         <img class="responsive-img" src="../../img/user.png" alt="alunos ativos">
@@ -68,7 +68,7 @@
     <div class="container">
         <a href="../financas/financas.html">
             <div class="quadrado2">
-                <div class="row square" id="alunos">
+                <div class="row square" id="pagamentos">
                     <div class="col s12 m12 l6 ">
                         <h2>Pagamentos</h2>
                     </div>
