Adicioanndo pre loader

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 </head>
 
 <body>
+    <div class="center-align loader">
+        <img src="img/bike.svg" alt="Loader" class="responsive-img">
+    </div>
+
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper #ffffff white">
@@ -306,7 +310,8 @@
                         <li><a class="white-text text-lighten-3" href="#">Home</a></li>
                         <li><a class="white-text text-lighten-3" href="../pages/sobre/sobre.html">Sobre</a></li>
                         <li><a class="white-text text-lighten-3" href="../pages/entrar/login.html">Entrar</li>
-                        <li><a class="white-text text-lighten-3" href="../pages/cadastro/cadastro.html">Registrar</a></li>
+                        <li><a class="white-text text-lighten-3" href="../pages/cadastro/cadastro.html">Registrar</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
@@ -341,6 +346,7 @@
                 });
         }
     </script>
+    <script src="js/loader.js"></script>
 </body>
 
 </html>
