--- a/pages/cadastro/cadastro.html
+++ b/pages/cadastro/cadastro.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+    <div class="center-align loader">
+        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
+    </div>
 
     <div class="logout">
         <div class="row">
@@ -66,6 +69,8 @@
             </div>
         </div>
     </div>
+
+    <script src="../../js/loader.js"></script>
 </body>
 
 </html>
