--- a/pages/sobre/sobre.html
+++ b/pages/sobre/sobre.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+    <div class="center-align loader">
+        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
+    </div>
 
     <div class="navbar-fixed">
         <nav>
@@ -54,7 +57,7 @@
                 </p>
             </div>
             <div class="col s12 m6 l6">
-                <img class="responsive-img" src="../../img/bike.svg" alt="Ilustração">
+                <img class="responsive-img" src="../../img/atividades.png" alt="Ilustração">
             </div>
         </div>
     </div>
@@ -331,6 +334,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="../../js/main.js"></script>
     <script src="../../js/topo.js"></script>
+    <script src="../../js/loader.js"></script>
 </body>
 
 </html>
