--- a/pages/alunos/alunos.html
+++ b/pages/alunos/alunos.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+    <div class="center-align loader">
+        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
+    </div>
 
     <div class="navbar-fixed">
         <nav>
@@ -181,6 +184,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="../../js/main.js"></script>
     <script src="../../js/topo.js"></script>
+    <script src="../../js/loader.js"></script>
 </body>
 
 </html>
