--- a/pages/crie/crie.html
+++ b/pages/crie/crie.html
@@ -12,6 +12,10 @@
 </head>
 
 <body onload="renderDate()">
+    <div class="center-align loader">
+        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
+    </div>
+
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper #ffffff white">
@@ -146,6 +150,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="../../js/main.js"></script>
     <script src="../../js/topo.js"></script>
+    <script src="../../js/loader.js"></script>
 </body>
 
 </html>
