--- a/pages/entrar/login.html
+++ b/pages/entrar/login.html
@@ -14,6 +14,10 @@
 </head>
 
 <body>
+    <div class="center-align loader">
+        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
+    </div>
+
     <div class="row">
 
         <div class="col s12 m11 l5" id="login">
@@ -55,6 +59,7 @@
         </div>
     </div>
 
+    <script src="../../js/loader.js"></script>
 </body>
 
 </html>
