--- a/pages/financas/financas.html
+++ b/pages/financas/financas.html
@@ -14,6 +14,10 @@
 </head>
 
 <body>
+    <div class="center-align loader">
+        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
+    </div>
+
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper #ffffff white">
@@ -192,6 +196,7 @@
     <script src="../../js/main.js"></script>
     <script src="../../js/topo.js"></script>
     <script src="../../js/finacas.js"></script>
+    <script src="../../js/loader.js"></script>
 </body>
 
 </html>
