--- a/pages/treino/treino.html
+++ b/pages/treino/treino.html
@@ -14,6 +14,10 @@
 </head>
 
 <body>
+    <div class="center-align loader">
+        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
+    </div>
+
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper #ffffff white">
@@ -45,12 +49,6 @@
         <li><a href="../controle/controle.html" class="black-text">Controle</a></li>
         <li><a href="#" class="black-text">Treino</a></li>
     </ul>
-
-
-
-    <div class="col s12 m12 l4">
-        <img src="../../img/atividades.png" alt="atividades" lass="responsive-img">
-    </div>
 
 
     <!-- FOOTER -->
@@ -88,6 +86,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="../../js/main.js"></script>
     <script src="../../js/topo.js"></script>
+    <script src="../../js/loader.js"></script>
 </body>
 
 </html>
