Finalizando parte mobile

--- a/pages/sobre/sobre.html
+++ b/pages/sobre/sobre.html
@@ -52,11 +52,12 @@
     <!-- SOBRE -->
     <div id="sobre">
         <div class="row">
-            <div class="col s12 m6 l6">
-                <p>Com o <span>High Performance</span> você pode monitorar todos os dados do aplicativo Strava do seus alunos, marcar aulas, ter um gestão dos seus pagamentos, entre outros. Tudo isso apenas em um só lugar.
+            <div class="col s12 m12 l6">
+                <p>Com o <span>High Performance</span> você pode monitorar todos os dados do seus alunos que estão utilizando o aplicativo <img src="../../img/strava.png" alt="">, marcar aulas, ter um gestão dos seus pagamentos, lista de presença, entre
+                    outros. Tudo isso apenas em um só lugar.
                 </p>
             </div>
-            <div class="col s12 m6 l6">
+            <div class="col s12 m12 l6" id="ilustracao">
                 <img class="responsive-img" src="../../img/atividades.png" alt="Ilustração">
             </div>
         </div>
