Alterando rotas, img, etc

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
     <meta name="theme-color" content="#ffffff">
     <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -13,7 +14,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="apple-touch-icon" href="img/icon-192x192.png">
-    <link rel=”canonical” href=”index.html” />
+    <link rel=”canonical” href=”index.html”/>
     <link rel="manifest" href="/manifest.json">
     <script>
         if ('serviceWorker' in navigator) {
@@ -37,7 +38,7 @@
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <a href="index.html" class="brand-logo"><img class="responsive-img" src="../../img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
+                <a href="#" class="brand-logo"><img class="responsive-img" src="../../img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
@@ -48,7 +49,7 @@
                 <ul id="navbar-items" class="right hide-on-med-and-down">
                     <li><a href="#" class="orange-text">Home</a></li>
                     <li><a href="./pages/sobre/sobre.html" class="black-text">Sobre</a></li>
-                    <li><a href="../pages/entrar/login.html" class="black-text">Entrar</a></li>
+                    <li><a href="../pages/entrar/login.html" class="black-text" aria-label="Entrar">Entrar</a></li>
                     <li><a href="../pages/cadastro/cadastro.html" class="black-text">Registrar</a></li>
                 </ul>
 
@@ -73,7 +74,7 @@
             <h1 class="right-align">MONITORE <br> SEUS ALUNOS</h1>
             <p class="right-align">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
             </p>
-            <a href="../sobre/sobre.html">Saber mais</a>
+            <a href="./pages/sobre/sobre.html">Saber mais</a>
         </div>
     </div>
 
@@ -149,7 +150,7 @@
             <div class="square center-align">
                 <h6>COMECE <span>AGORA</span> A USAR<br> O <span>HIGH PERFORMANCE</span></h6>
             </div>
-            <a href="../cadastro/cadastro.html">Cadastre-se</a>
+            <a href="./pages/cadastro/cadastro.html">Cadastre-se</a>
         </div>
 
         <div class="col s12 m12 l7 left-align">
@@ -308,9 +309,8 @@
                     <ul>
                         <li><a class="white-text text-lighten-3" href="#">Home</a></li>
                         <li><a class="white-text text-lighten-3" href="../pages/sobre/sobre.html">Sobre</a></li>
-                        <li><a class="white-text text-lighten-3" href="../pages/entrar/login.html">Entrar</li>
-                        <li><a class="white-text text-lighten-3" href="../pages/cadastro/cadastro.html">Registrar</a>
-                        </li>
+                        <li><a class="white-text text-lighten-3" href="../pages/entrar/login.html" aria-label="Entrar">Entrar</li>
+                        <li><a class="white-text text-lighten-3" href="../pages/cadastro/cadastro.html">Registrar</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
