--- a/pages/cadastro/cadastro.html
+++ b/pages/cadastro/cadastro.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
     <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro</title>
@@ -21,7 +22,9 @@
     <div class="logout">
         <div class="row">
             <div class="col s12 m12 l5" id="cadastroContainer">
-                <img class="responsive-img logo" src="../../img/logo.png" alt="High Performance">
+                <a href="../../index.html">
+                    <img class="responsive-img logo" src="../../img/logo.png" alt="High Performance">
+                </a>
                 <h1>Cadastro</h1>
 
                 <p>Faça seu cadastro, entre na plataforma e monitore seus alunos.</p>
@@ -47,6 +50,11 @@
                         <i class="material-icons prefix">email</i>
                         <input id="email" type="email" class="validate">
                         <label for="email">E-mail</label>
+                    </div>
+                    <div class="input-field">
+                        <i class="material-icons prefix">call</i>
+                        <input id="cel" type="number" class="validate">
+                        <label for="cel">Celular</label>
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">lock_outline</i>
