--- a/pages/entrar/login.html
+++ b/pages/entrar/login.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
     <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
@@ -21,7 +22,9 @@
     <div class="row">
 
         <div class="col s12 m11 l5" id="login">
-            <img class="responsive-img logo" src="../../img/logo.png" alt="">
+            <a href="../../index.html">
+                <img class="responsive-img logo" src="../../img/logo.png" alt="High Performance">
+            </a>
             <h1>Faça seu Login</h1>
 
             <form id="form">
@@ -32,8 +35,8 @@
                 </div>
                 <div class="input-field">
                     <i class="material-icons prefix">lock_outline</i>
-                    <input iid="icon_prefix" type="password" class="validate">
-                    <label for="icon_telephone">Senha</label>
+                    <input id="senha" type="password" class="validate">
+                    <label for="senha">Senha</label>
                 </div>
                 <div class="input-field">
                     <a href="../alunos/alunos.html">
