--- a/pages/sobre/sobre.html
+++ b/pages/sobre/sobre.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
     <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sobre</title>
@@ -44,7 +45,7 @@
     <ul id="mobile-navbar" class="sidenav">
         <li><a href="../../index.html">Início</a></li>
         <li><a href="#" class="orange-text">Sobre</a></li>
-        <li><a href="../entrar/login.html" class="black-text">Entrar</a></li>
+        <li><a href="../entrar/login.html" class="black-text" aria-label="Entrar">Entrar</a></li>
         <li><a href="../cadastro/cadastro.html" class="black-text">Registrar</a></li>
     </ul>
 
@@ -87,7 +88,7 @@
                             <p>
                                 <i class="material-icons">perm_identity</i>Sei lá</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text" target="_blank">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
                             <p>
                                 <i class="material-icons">email</i> yourmail@domain.com</p>
                         </div>
@@ -99,7 +100,7 @@
                             <p>
                                 <i class="material-icons">perm_identity</i>Sei lá</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text" target="_blank">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
                             <p>
                                 <i class="material-icons">email</i> yourmail@domain.com
                             </p>
@@ -115,7 +116,7 @@
                 </div>
 
                 <div class="col s12 m6 l6">
-                    <div id="profile-card" class="card">
+                    <div id="profile-card2" class="card">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="../../img/8.png" alt="user bg">
                         </div>
@@ -128,7 +129,7 @@
                             <p>
                                 <i class="material-icons">perm_identity</i>Sei lá</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text" target="_blank">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
                             <p>
                                 <i class="material-icons">email</i> yourmail@domain.com</p>
                         </div>
@@ -140,7 +141,7 @@
                             <p>
                                 <i class="material-icons">perm_identity</i>Sei lá</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text" target="_blank">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
                             <p>
                                 <i class="material-icons">email</i> yourmail@domain.com
                             </p>
@@ -156,7 +157,7 @@
                 </div>
 
                 <div class="col s12 m6 l6">
-                    <div id="profile-card" class="card">
+                    <div id="profile-card3" class="card">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="../../img/8.png" alt="user bg">
                         </div>
@@ -169,7 +170,7 @@
                             <p>
                                 <i class="material-icons">perm_identity</i>Sei lá</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
                             <p>
                                 <i class="material-icons">email</i> yourmail@domain.com</p>
                         </div>
@@ -181,7 +182,7 @@
                             <p>
                                 <i class="material-icons">perm_identity</i>Sei lá</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
                             <p>
                                 <i class="material-icons">email</i> yourmail@domain.com
                             </p>
@@ -197,7 +198,7 @@
                 </div>
 
                 <div class="col s12 m6 l6">
-                    <div id="profile-card" class="card">
+                    <div id="profile-card4" class="card">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="../../img/8.png" alt="user bg">
                         </div>
@@ -210,7 +211,7 @@
                             <p>
                                 <i class="material-icons">perm_identity</i>Scrum Master</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
                             <p>
                                 <i class="material-icons">email</i> yourmail@domain.com</p>
                         </div>
@@ -222,7 +223,7 @@
                             <p>
                                 <i class="material-icons">perm_identity</i>Scrum Master</p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
                             <p>
                                 <i class="material-icons">email</i> yourmail@domain.com</p>
                             <p>
@@ -258,7 +259,7 @@
                                 <div class="input-field col s12">
                                     <i class="material-icons prefix">account_circle</i>
                                     <input id="name" type="text" class="validate">
-                                    <label for="first_name">Nome</label>
+                                    <label for="name">Nome</label>
                                 </div>
                             </div>
                             <div class="row">
@@ -271,7 +272,7 @@
                             <div class="row">
                                 <div class="input-field col s12">
                                     <i class="material-icons prefix">archive</i>
-                                    <input id="password" type="file" class="validate">
+                                    <input id="cv" type="file" class="validate">
                                 </div>
                             </div>
                             <div class="row">
@@ -311,7 +312,7 @@
                     <ul>
                         <li><a class="white-text text-lighten-3" href="../../index.html">Home</a></li>
                         <li><a class="white-text text-lighten-3" href="#">Sobre</a></li>
-                        <li><a class="white-text text-lighten-3" href="../entrar/login.html">Entrar</li>
+                        <li><a class="white-text text-lighten-3" href="../entrar/login.html" aria-label="Entrar">Entrar</li>
                         <li><a class="white-text text-lighten-3" href="../cadastro/cadastro.html">Registrar</a></li>
                     </ul>
                 </div>
