--- a/pages/crie/crie.html
+++ b/pages/crie/crie.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <title>Crie</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
@@ -9,7 +10,7 @@
     <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="crie.css">
-    <title>Crie</title>
+    <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/crie/crie.html" />
 </head>
 
 <body onload="renderDate()">
