--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="pt-br">
 
 <head>
+    <title>HIGH PERFORMANCE</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../favicon-16x16.png">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HIGH PERFORMANCE</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="apple-touch-icon" href="img/icon-180x180.png">
-    <link rel=”canonical” href="https://highperformance.herokuapp.com"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
+    <link rel=”canonical” href="https://highperformance.herokuapp.com" />
     <link rel="manifest" href="/manifest.json">
     <script>
         if ('serviceWorker' in navigator) {
