pagina cadastro de alunos

--- a/pages/alunos/alunos.html
+++ b/pages/alunos/alunos.html
@@ -13,12 +13,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/alunos/alunos.html" />
 </head>
-
 <body>
     <div class="center-align loader">
         <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
     </div>
-
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper #ffffff white">
@@ -64,7 +62,7 @@
                 </div>
             </div>
             <div class="col s12 m12 l12 right-align baixoQuadrado">
-                <p>ADICIONAR NOVO ALUNO</p>
+               <a id="addAluno" href="cadastrarAlunos.html">ADICIONAR NOVO ALUNO</a>
             </div>
         </div>
     </div>
