estilizando pagina cadastro de alunos

--- a/pages/alunos/alunos.html
+++ b/pages/alunos/alunos.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/alunos/alunos.html" />
 </head>
+
 <body>
     <div class="center-align loader">
         <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
@@ -62,7 +63,7 @@
                 </div>
             </div>
             <div class="col s12 m12 l12 right-align baixoQuadrado">
-               <a id="addAluno" href="cadastrarAlunos.html">ADICIONAR NOVO ALUNO</a>
+                <a id="addAluno" href="../cadastroAluno/cadastrarAlunos.html">ADICIONAR NOVO ALUNO</a>
             </div>
         </div>
     </div>
