--- a/pages/cadastroAluno/cadastrarAlunos.html
+++ b/pages/cadastroAluno/cadastrarAlunos.html
@@ -9,22 +9,26 @@
     <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="cadastro.css">
+    <link rel="stylesheet" href="cadastroAlunos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/cadastro/cadastro.html" />
 </head>
 
 <body>
 
-    <div class="logout">
+    <div class="center-align loader">
+        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
+    </div>
+
+    <div class="cadastro">
         <div class="row">
-            <div class="col s12 m12 l5" id="cadastroContainer">
+            <div class="col s12 m12 l6 center-align" id="cadastroContainer">
                 <a href="../../index.html">
-                    <img class="responsive-img logo" src="../../img/logo.png" alt="High Performance">
+                    <img class="responsive-img logo" src="../../img/icon512.png" alt="High Performance">
                 </a>
-                <h1>Cadastrar Aluno</h1>               
+                <h1>Cadastrar novo aluno</h1>
             </div>
-            <div class="col s12 m12 l7">
+            <div class="col s12 m12 l6">
                 <form id="form">
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
@@ -43,13 +47,13 @@
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">date_range</i>
-                        <input type="text" class="datepicker">
+                        <input type="date" class="datepicker">
                         <label for="password">Data Nasc.</label>
-                    </div>                    
+                    </div>
                     <div class="input-field">
                         <a href="../alunos/alunos.html">
                             <span class="btn waves-effect waves-light">
-                                <i class="material-icons">lock_open</i> Cadastrar
+                                <i class="material-icons">done</i> Cadastrar
                             </span>
                         </a>
                     </div>
@@ -57,6 +61,8 @@
             </div>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="../../js/loader.js"></script>
 </body>
 
