--- a/pages/cadastro/cadastro.html
+++ b/pages/cadastro/cadastro.html
@@ -53,7 +53,7 @@
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">call</i>
-                        <input id="cel" type="number" class="validate">
+                        <input type="text" class="form-control" onkeypress="$(this).mask('(00) 0000-00009')">
                         <label for="cel">Celular</label>
                     </div>
                     <div class="input-field">
@@ -78,6 +78,10 @@
         </div>
     </div>
 
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="../../js/loader.js"></script>
 </body>
 
