Apgando page controle e navbar

--- a/pages/financas/financas.html
+++ b/pages/financas/financas.html
@@ -35,7 +35,7 @@
                     <li><a href="../../index.html" class="black-text">Home</a></li>
                     <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
                     <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
-                    <li><a href="../controle/controle.html" class="orange-text">Controle</a></li>
+                    <li><a href="../financas/financas.html" class="orange-text">Finanças</a></li>
                     <li><a href="../treino/treino.html" class="black-text">Treino</a></li>
                 </ul>
             </div>
@@ -47,7 +47,7 @@
         <li><a href="../../index.html" class="black-text">Home</a></li>
         <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
         <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
-        <li><a href="../controle/controle.html" class="orange-text">Controle</a></li>
+        <li><a href="../financas/financas.html" class="orange-text">Finanças</a></li>
         <li><a href="../treino/treino.html" class="black-text">Treino</a></li>
     </ul>
 
@@ -89,8 +89,6 @@
                 <div>
 
                     <div class="col s12 m12 l12 left-align">
-                        <p>Alunos</p>
-
                         <div class="nav-wrapper">
                             <form>
                                 <div class="input-field">
@@ -174,7 +172,7 @@
                         <li><a class="white-text text-lighten-3" href="../../index.html">Home</a></li>
                         <li><a class="white-text text-lighten-3" href="../alunos/alunos.html">Alunos</a></li>
                         <li><a class="white-text text-lighten-3" href="../crie/crie.html">Crie</a></li>
-                        <li><a class="white-text text-lighten-3" href="../controle/controle.html">Controle</a></li>
+                        <li><a class="white-text text-lighten-3" href="../financas/financas.html">Finanças</a></li>
                         <li><a class="white-text text-lighten-3" href="../treino/treino.html">Treino</a></li>
                     </ul>
                 </div>
