--- a/pages/crie/crie.html
+++ b/pages/crie/crie.html
@@ -34,7 +34,7 @@
                     <li><a href="../../index.html" class="black-text">Home</a></li>
                     <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
                     <li><a href="#" class="orange-text">Crie</a></li>
-                    <li><a href="../controle/controle.html" class="black-text">Controle</a></li>
+                    <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
                     <li><a href="../treino/treino.html" class="black-text">Treino</a></li>
                 </ul>
             </div>
@@ -46,7 +46,7 @@
         <li><a href="../../index.html" class="black-text">Home</a></li>
         <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
         <li><a href="#" class="orange-text">Crie</a></li>
-        <li><a href="../controle/controle.html" class="black-text">Controle</a></li>
+        <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
         <li><a href="treino.html" class="black-text">Treino</a></li>
     </ul>
 
@@ -459,7 +459,7 @@
                         <li><a class="white-text text-lighten-3" href="../../index.html">Home</a></li>
                         <li><a class="white-text text-lighten-3" href="../alunos/alunos.html">Alunos</a></li>
                         <li><a class="white-text text-lighten-3" href="">Crie</a></li>
-                        <li><a class="white-text text-lighten-3" href="../controle/controle.html">Controle</a></li>
+                        <li><a class="white-text text-lighten-3" href="../financas/financas.html">Finanças</a></li>
                         <li><a class="white-text text-lighten-3" href="../treino/treino.html">Treino</a></li>
                     </ul>
                 </div>
