--- a/pages/treino/treino.html
+++ b/pages/treino/treino.html
@@ -35,7 +35,7 @@
                     <li><a href="../../index.html" class="black-text">Home</a></li>
                     <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
                     <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
-                    <li><a href="../controle/controle.html" class="black-text">Controle</a></li>
+                    <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
                     <li><a href="#" class="orange-text">Treino</a></li>
                 </ul>
             </div>
@@ -47,7 +47,7 @@
         <li><a href="../../index.html" class="black-text">Home</a></li>
         <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
         <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
-        <li><a href="../controle/controle.html" class="black-text">Controle</a></li>
+        <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
         <li><a href="#" class="orange-text">Treino</a></li>
     </ul>
 
@@ -321,7 +321,7 @@
                         <li><a class="white-text text-lighten-3" href="../../index.html">Home</a></li>
                         <li><a class="white-text text-lighten-3" href="../alunos/alunos.html">Alunos</a></li>
                         <li><a class="white-text text-lighten-3" href="../crie/crie.html">Crie</a></li>
-                        <li><a class="white-text text-lighten-3" href="../controle/controle.html">Controle</a></li>
+                        <li><a class="white-text text-lighten-3" href="../financas/financas.html">Finanças</a></li>
                         <li><a class="white-text text-lighten-3" href="#">Treino</a></li>
                     </ul>
                 </div>
@@ -338,7 +338,7 @@
         </div>
     </footer>
 
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="../../js/main.js"></script>
